Corri desde texifier

--- a/docs/notas/notas.tex
+++ b/docs/notas/notas.tex
@@ -3,6 +3,7 @@
 \usepackage[utf8]{inputenc}
 \usepackage{amsmath, amssymb, amsthm}
 \usepackage{mathpazo}
+%\setlength{\parskip}{1em}
 \usepackage{tikz}
 \usetikzlibrary{babel}
 \usepackage{geometry}
@@ -73,7 +74,7 @@
 \makeatother
 
 
-\usepackage[skip=10pt plus1pt, indent=10pt]{parskip}
+%\usepackage[skip=10pt plus1pt, indent=10pt]{parskip}
 
 \begin{document}
 \chapter{Probabilidad} 
