--- a/docs/notas/notas.tex
+++ b/docs/notas/notas.tex
@@ -3,7 +3,7 @@
 \usepackage[utf8]{inputenc}
 \usepackage{amsmath, amssymb, amsthm}
 \usepackage{mathpazo}
-%\setlength{\parskip}{1em}
+\setlength{\parskip}{1em}
 \usepackage{tikz}
 \usetikzlibrary{babel}
 \usepackage{geometry}
@@ -34,7 +34,7 @@
 
 
  \newtheoremstyle{definicion}%
-    {3pt}%
+    {-1pt}%
     {3pt}%
     {}%
     {}%
@@ -42,13 +42,15 @@
     {.}%
     {\newline}%
     {}%
+    
+
 \theoremstyle{definicion}
 \newtheorem{definition}{Definición}[chapter]
 
 \surroundwithmdframed[linewidth=1pt, roundcorner=10pt, backgroundcolor=gray!10]{definition}
 
 \newtheoremstyle{propiedad}%
-    {3pt}%
+    {-1pt}%
     {3pt}%
     {\itshape}% Fuente del cuerpo
     {}%
@@ -553,7 +555,7 @@ $$
 
 En este caso decimos que la caminata aleatoria es una *caminata aleatoria simétrica.* Veremos mas tarde el valor de este supuesto.
 
----
+—
 
 \subsection{Esperanza condicional.}
 
