--- a/docs/notas/notas.tex
+++ b/docs/notas/notas.tex
@@ -142,26 +142,22 @@ $$
 La manera de definir el espacio muestral es por completo decisión de quien modela el experimento aleatorio.  
 
 \begin{example}\label{ex:1}
-Otro buen ejemplo es el siguiente, supongamos que lanzamos tres monedas si en un lanzamiento sale sol ganamos un peso y si sale águila perdemos un peso. Claramente nos interesa saber cuál será nuestra ganancia (pérdida) total al final de los tres lanzamientos. Empecemos por proponer un espacio muestral:
+Otro buen ejemplo es el siguiente, supongamos que lanzamos tres monedas. Si en un lanzamiento sale sol ganamos un peso y si sale águila perdemos un peso. Claramente nos interesa saber cuál será nuestra ganancia (pérdida) total al final de los tres lanzamientos. Empecemos por proponer un espacio muestral:
 
 $$
-\Omega = \left\{\omega = (\nu_1, \nu_2, \nu_3): \nu_i \in\{A,S\}\text{ para } i = 1,2,3 \right\}
+\Omega = \left\{\omega = (\nu_1, \nu_2, \nu_3): \nu_i \in\{A,S\}\text{ para } i = 1,2,3 \right\}.
 $$
-esta propuesta es conveniente para la idea que deseamos desarrollar, sin embargo no es para nada la única. De nuevo, la definición de $\Omega$ depende por completo de las necesidades de quien modela el experimento aleatorio.
 
-Un elemento particular de $\Omega$ es por ejemplo: $\omega = (S,A,S)$. En este escenario, ganamos un peso en el primer lanzamiento, perdimos un peso en el segundo y ganamos uno en el tercero. En total tendríamos una ganancia de 1 peso después de lanzar tres veces la moneda,  si  $\omega = (S,S,S)$ entonces ganamos en los tres lanzamientos y por tanto tendremos 3 pesos al final del juego. En un escenario menos afortunado, si $\omega = (A,S,A)$ entonces habremos perdido en dos de los tres lanzamientos y por tanto nuestra pérdida final será de $-1$ pesos. 
+Esta propuesta es conveniente para la idea que deseamos desarrollar, sin embargo no es para nada la única. De nuevo, la definición de $\Omega$ depende por completo de las necesidades de quien modela el experimento aleatorio.
+
+Un elemento particular de $\Omega$ es por ejemplo: $\omega = (S,A,S)$. En este escenario, ganamos un peso en el primer lanzamiento, perdimos un peso en el segundo y ganamos uno en el tercero. En total tendríamos una ganancia de 1 peso después de lanzar tres veces la moneda. Si  $\omega = (S,S,S)$ entonces ganamos en los tres lanzamientos y por tanto tendremos 3 pesos al final del juego. En un escenario menos afortunado, si $\omega = (A,S,A)$ entonces habremos perdido en dos de los tres lanzamientos y por tanto nuestra pérdida final será de $-1$ pesos. 
 
 Pongamos un poco de orden y reescribamos $\Omega$ de forma explícita:
-%\begin{align*}
-%        \Omega =  & \left\{\omega_1   = (SSS), \omega_2  = (SSA),\omega_3  = (SAS), \omega_4  = (SAA) \right.\\
-%                  & \left. \omega_5   = (ASS), \omega_6  = (ASA),\omega_7  = (AAS), \omega_8  = (AAA) \right\}
-%\end{align*}
 
 \begin{align*}
         \Omega =  & \left\{(SSS), (SSA), (SAS), (SAA) \right.\\
                   & \left. (ASS), (ASA), (AAS), (AAA) \right\}
 \end{align*}
-
 y agrupemos:
 \begin{equation*}
     \begin{split}
@@ -183,7 +179,7 @@ $$
 Una interpretación parecida podemos darle a cualquier otro subconjunto de $\Omega$ definido a partir de los subconjuntos $A_3$, $A_1$, $A_{-1}$ y $A_{-3}$. 
 \end{example}
 
-La idea mas importante que debemos extraer del ejemplo anterior es la de entender que cada uno de estos subconjuntos representa información, información que puede ser de gran valor. Si este es el caso, sería natural pensar en trabajar con la potencia de $\Omega$ al momento de desarrollar un modelo probabilístico. En algunos casos simples esto es posible, aunque quizás no fuese conveniente, sin embargo en otros casos ni siquiera es posible. Particularmente cuando $\Omega$ es infinito, trabajar con $2^\Omega$ puede conducirnos a situaciones donde no sea posible definir una noción de probabilidad para todos los subconjuntos de $\Omega$. Por esta razón es conveniente trabajar con una colección de subconjuntos de $\Omega$ un poco mas ``controlada'', esta es la idea de la siguiente definición. 
+La idea mas importante que debemos extraer del ejemplo anterior es entender que cada uno de estos subconjuntos representa información, información que puede ser de gran valor. Si este es el caso, sería natural pensar en trabajar con la potencia de $\Omega$ al momento de desarrollar un modelo probabilístico. En algunos casos simples esto es posible, aunque quizás no fuese conveniente, sin embargo en otros casos ni siquiera es posible. Particularmente cuando $\Omega$ es infinito, trabajar con $2^\Omega$ puede conducirnos a situaciones donde no sea posible definir una noción de probabilidad para todos los subconjuntos de $\Omega$. Por esta razón es conveniente trabajar con una colección de subconjuntos de $\Omega$ un poco mas ``controlada'', esta es la idea de la siguiente definición. 
 \begin{definition}[$\sigma$-álgebra]
     Dado un conjunto $\Omega$ decimos que la colección $\mathcal{F}$ de subconjuntos de $\Omega$ es una $\sigma$-\emph{álgebra} si:
     \begin{enumerate}
@@ -207,23 +203,21 @@ lo cual prueba que una $\sigma$-álgebra también es cerrada bajo uniones finita
 Dado un conjunto $\Omega$, la $\sigma$-álgebra de subconjuntos de $\Omega$ mas pequeña que podemos definir es:
 
 $$
-\mathcal{F} = \left\{\emptyset, \Omega\right\}
+\mathcal{F} = \left\{\emptyset, \Omega\right\}.
 $$
-en contraste, la $\sigma$-álgebra de subconjuntos de $\Omega$  mas grande que podemos construir es $2^\Omega$. No es difícil demostrar este par de aseveraciones. Otros dos ejemplos populares son los siguientes: si $A\subset \Omega$, la colección:
+En contraste, la $\sigma$-álgebra de subconjuntos de $\Omega$  mas grande que podemos construir es $2^\Omega$. No es difícil demostrar este par de aseveraciones. Otros dos ejemplos populares son los siguientes: si $A\subset \Omega$, la colección:
 
 $$
 \mathcal{F} = \left\{\emptyset, A, A^c,\Omega\right\}
 $$
 es una $\sigma$-álgebra.
 
-Un ejemplo un poco mas retador lo encontramos si consideramos la colección de subconjuntos:
+Un ejemplo un poco mas retador lo encontramos con la colección de subconjuntos:
 
 $$
 \mathcal{F} = \left\{A\subset \Omega: A \text{ es numerable o } A^c \text{es numerable}\right\}
 $$
-$\mathcal{F}$ es una $\sigma$-álgebra. Para probar esto debemos verificar que $\mathcal{F}$ cumple con los 3 incisos en la definición de $\sigma$-álgebra, para ello observemos que como $\emptyset$ es numerable entonces $\Omega\in \mathcal{F}$. Por otro lado, es evidente que si $A\in \mathcal{F}$ entonces $A^c\in \mathcal{F}$. Por ultimo, consideremos una sucesión $\{A_i\}$ de subconjuntos en $\mathcal{F}$. Es decir, para toda $i$,  $A_i$ es numerable o bien $A_i^c$ es numerable. Si $A_i$ es numerable para toda $i$ entonces $\cup_iA_i$ es numerable y por tanto $\cup_i A_i\in \mathcal{F}$. Por el contrario, si existe $i$ tal que $A_i$ es no numerable entonces $A_i^c$ es numerable, por lo tanto: $\left(\cup_iA_i\right)^c = \cap_iA_i^c$ si es numerable. En consecuencia $\cup_iA_i\in \mathcal{F}$, con lo cual demostramos que $\mathcal{F}$ es una $\sigma$-álgebra.
-
-
+$\mathcal{F}$ es una $\sigma$-álgebra. Para probar esto debemos verificar que $\mathcal{F}$ cumple con los 3 incisos en la definición de $\sigma$-álgebra, para ello observemos que como $\emptyset$ es numerable entonces $\Omega\in \mathcal{F}$. Por otro lado, es evidente que si $A\in \mathcal{F}$ entonces $A^c\in \mathcal{F}$. Por ultimo, consideremos una sucesión $\{A_i\}$ de subconjuntos en $\mathcal{F}$. Es decir,$A_i$ es numerable o bien $A_i^c$ es numerable, para toda $i$. Si $A_i$ es numerable para toda $i$ entonces $\cup_iA_i$ es numerable y por tanto $\cup_i A_i\in \mathcal{F}$. Por el contrario, si existe $i$ tal que $A_i$ es no numerable entonces $A_i^c$ es numerable, por lo tanto: $\left(\cup_iA_i\right)^c = \cap_iA_i^c$ si es numerable. En consecuencia $\cup_iA_i\in \mathcal{F}$, con lo cual demostramos que $\mathcal{F}$ es una $\sigma$-álgebra.
 
 \begin{definition}
 Dada una colección $\mathcal{C}$ de subconjuntos de $\Omega$, definimos a la $\sigma$-álgebra generada por $\mathcal{C}$ como la $\sigma$-álgebra mas pequeña que contiene a $\mathcal{C}$. A esta $\sigma$-álgebra la denotamos con $\sigma(\mathcal{C})$.    
